http/tests/security/mixedContent/blob-url-in-iframe.html fails on Mac https://bugs.webkit.org/show_bug.cgi?id=88736

Reviewed by Alexey Proskuryakov.

Source/WebKit/mac:

WebView::_canHandleRequest should return true for "blob:" URL so that it can be shown in iframe.

* WebView/WebView.mm:
(+[WebView _canHandleRequest:forMainFrame:]):

LayoutTests:

Remove security/mixedContent/blob-url-in-iframe.html as it should pass with this patch.

* platform/mac/Skipped:


Canonical link: https://commits.webkit.org/111522@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125235 268f45cc-cd09-0410-ab3c-d52691b4dbfc